feat: add subs CRUDL operations
